# specshell

./: .gitignore  CMakeLists.txt  INSTALL_GUIDE_RU.md  LICENSE  README.md  Register.cpp  SpectrogramContextMenu.cpp  SpectrogramContextMenu.def  SpectrogramContextMenu.h  SpectrogramContextMenu.rc  build.bat  build_cmake.bat  install_ext.bat  install_ffmpeg.bat  resource.h  uninstall_ext.bat
